# that_game_engine

./: .gitignore  LICENSE  README.md
0/: Useful Links.txt
1 - Game Loop/: CMakeLists.txt
1 - Game Loop/src/: Game.cpp  Game.hpp  Main.cpp
10 - Object Management/: CMakeLists.txt
10 - Object Management/src/: C_Sprite.cpp  Object.cpp  Object.hpp  SceneGame.cpp  SceneGame.hpp  SceneSplashScreen.cpp
11 - Animation Part 1/: CMakeLists.txt
11 - Animation Part 1/src/: C_Animation.cpp  C_KeyboardMovement.cpp  C_KeyboardMovement.hpp  Input.hpp  ResourceAllocator.hpp  SceneGame.cpp  SceneStateMachine.cpp  Window.cpp
12 - Animation Part 2/: CMakeLists.txt
12 - Animation Part 2/src/: C_KeyboardMovement.cpp  Input.cpp  Object.hpp  ObjectCollection.hpp  SceneGame.cpp
13 - Tile Map Parser Part 1/src/: Animation.cpp  C_Sprite.cpp  C_Sprite.hpp  C_Transform.hpp  ObjectCollection.cpp  ObjectCollection.hpp  SceneGame.cpp  SceneGame.hpp  SceneSplashScreen.cpp  TileMapParser.cpp  TileMapParser.hpp  Window.cpp
13 - Tile Map Parser/resources/: Test Map 1.tmx
16 - Quadtree/src/: Animation.hpp  (+8 more)
2 - First Draw/: CMakeLists.txt
2 - First Draw/src/: Game.cpp  Game.hpp
3 - Frame Independent Movement/: CMakeLists.txt
4 - Bitmasks/: CMakeLists.txt
5 - Real Time Input/: CMakeLists.txt
6 - Scene Management/: CMakeLists.txt
7 - ECS Part 1/: CMakeLists.txt
8 - ECS Part 2/: CMakeLists.txt
8 - ECS Part 2/src/: C_KeyboardMovement.hpp  C_Sprite.cpp  C_Sprite.hpp  Game.hpp  Object.cpp  Object.hpp  SceneGame.cpp  SceneGame.hpp
9 - Generic Resource Allocator/: CMakeLists.txt
(+453 files in other folders)
